data-xfer/main/default/objects/Object_Relation__mdt/Object_Relation__mdt.object-meta.xml
<CustomObject>
    <label>Object Relation</label>
    <pluralLabel>Object Relations</pluralLabel>
</CustomObject>