data-xfer/main/default/objects/Object_Relation__mdt/fields/Accessor_1__c.field-meta.xml
<CustomField>
    <fullName>Accessor_1__c</fullName>
    <label>Accessor 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>