data-xfer/main/default/objects/Object_Relation__mdt/fields/Accessor_2__c.field-meta.xml
<CustomField>
    <fullName>Accessor_2__c</fullName>
    <label>Accessor 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>