data-xfer/main/default/objects/Object_Relation__mdt/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>