data-xfer/main/default/objects/Object_Relation__mdt/fields/Extras__c.field-meta.xml
<CustomField>
    <fullName>Extras__c</fullName>
    <label>Extras</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>