data-xfer/main/default/objects/Object_Relation__mdt/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>