data-xfer/main/default/objects/Object_Relation__mdt/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Field2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>