data-xfer/main/default/objects/Object_Relation__mdt/fields/Intermediate_Object__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Object__c</fullName>
    <label>Intermediate Object</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Junction Objects</relationshipLabel>
    <relationshipName>Junction_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>