data-xfer/main/default/objects/Object_Relation__mdt/fields/Object1__c.field-meta.xml
<CustomField>
    <fullName>Object1__c</fullName>
    <label>Object1</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object1 Relations</relationshipLabel>
    <relationshipName>Object_Relations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>