data-xfer/main/default/objects/Object_Relation__mdt/fields/Object2__c.field-meta.xml
<CustomField>
    <fullName>Object2__c</fullName>
    <label>Object2</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object2 Relations</relationshipLabel>
    <relationshipName>Object_Relations1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>