data-xfer/main/default/objects/Object_Relation__mdt/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <label>Ratio</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>