data-xfer/main/default/objects/Object_Relation__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>reference</fullName>
                <default>true</default>
                <label>reference</label>
            </value>
            <value>
                <fullName>junction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>